--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "安裝套件": "npm install",
+    "開發用" : "gulp",
+    "上線用" :"gulp online"
   },
   "repository": {
     "type": "git",
